--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,6 @@ article:after, article:before {
   line-height: 1.2em;
   padding: 10px;
   text-decoration: none !important;
-  text-transform: uppercase;
   transition: background .3s, color .3s
 }
 .button:hover {
@@ -159,6 +158,14 @@ article:after, article:before {
   font-size: 10px;
   font-weight: 400;
   margin-top: 3px;
+  text-decoration: none
+}
+.class-page-link {
+  float: right;
+  font-size: 10px;
+  font-weight: 400;
+  margin-top: 30px;
+  margin-left: 30px;
   text-decoration: none
 }
 
@@ -270,4 +277,11 @@ footer.nav-footer {
 }
 .big-button, li, p {
   font-size: 18px
+}
+
+
+@media only screen and (max-width: 1200px) {
+  .docsNavContainer {
+    flex: 0 0 150px;
+  }
 }
