--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
   border: 0;
   font: inherit;
   font-size: 100%;
@@ -116,6 +116,16 @@ textB {
 article:after, article:before {
   content: "";
   display: table
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 .button {
@@ -237,7 +247,7 @@ article:after, article:before {
 
 .docsNavContainer {
   flex: 0 0 240px;
-  height: calc(100vh - 50px);
+  height: calc(50vh );
   position: -webkit-sticky;
   position: sticky;
   overflow-y: auto;
@@ -329,9 +339,33 @@ footer.nav-footer {
   font-size: 18px
 }
 
-
 @media only screen and (max-width: 1200px) {
   .docsNavContainer {
     flex: 0 0 150px;
   }
+}
+
+/* -- */
+
+.CodeBox {
+  margin: auto;
+  width: 75%;
+  color: #fff;
+  border-radius: 20px;
+  padding: 2px;
+  font-size: 150%;
+  margin-bottom: 1em;
+}
+.CodeBoxBuffer {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+
+.question {
+  width: auto;
+}
+
+.answer {
+  display: none;
 }
