Started working on WD4

--- a/css/styles.css
+++ b/css/styles.css
@@ -574,6 +574,10 @@ textB {
   width: 80%;
 }
 
+.finalResultWapper img {
+  width: 100%;
+}
+
 .xamppImage {
   margin: auto;
   text-align: center;
