Cleaned up to page 15

--- a/css/styles.css
+++ b/css/styles.css
@@ -506,6 +506,11 @@ textB {
   background-color: #2f3640;
 }
 
+.prettifySQL {
+  color: #f0ff76;
+  background-color: #2f3640;
+}
+
 .prettifyCSS {
   background-color: #2f3640;
   color: #90EE90;
