--- a/css/styles.css
+++ b/css/styles.css
@@ -605,6 +605,12 @@ textB {
   text-align: center;
 }
 
+.mainCalc {
+  position: relative;
+  top: 50%;
+  left: 50%;
+}
+
 @media only screen and (max-width: 1000px) {
   .docsNavContainer {
     display: none;
